<resources>
    <string name="app_name">Ohio State Tour Challenge</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">User name must be more than 5 characters</string>
    <string name="error_invalid_password">Password must be more than 6 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_list">ListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_text">ABOUT</string>
    <string name="about_text_1">This app allows you to become familiar with the campus in an interactive manner.
        Select a location via the list or map. If you have not been to that location before then you will
        see a challenge question, you must be at the indicated location to see the question.
        After you answer the question correctly you will unlock additional information about that location.\n\n\n
        Created by: Michael Hamill, Trevor Rambacher, Vyyom Kelkar.\nFor CSE 5236</string>
    <string name="title_activity_map">Map</string>
    <string name="google_services">3.0.0</string>
    <string name="sign_out">Sign Out</string>
    <string name="facebook_app_id">1535322139909118</string>
    <string name="fb_login_protocol_scheme">fb1535322139909118</string>
    <string name="switch_button_locked_text">Unlocked Locations</string>
    <string name="location_option_locked_text">Your Locked Locations</string>
    <string name="switch_button_unlocked_text">Locked Locations</string>
    <string name="location_option_unlocked_text">Your Unlocked Locations</string>
    <string name="location_too_far_text">Go to this location to unlock the challenge question!</string>
    <string name="location_image_description_text">Location Image</string>
    <string name="testing_text">Testing</string>
    <string name="description_text">Description</string>
    <string name="welcome_text">Welcome!</string>
    <string name="location_button_text">Button</string>
    <string name="header_text">Your Locations</string>
    <string name="location_image">Location Image</string>
    <string name="location">Location</string>
    <string name="question">Question?</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>
    <string name="heading">Heading</string>
    <string name="description">Description</string>
    <string name="map">Map</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="credential_split_string">:</string>
    <string name="location_change">android.location.PROVIDERS_CHANGED</string>
</resources>
